# xdelta3-rs

./: Cargo.toml  README.md  azure-pipelines.yml  build.rs  ws
examples/: xdelta3-rs.rs
src/: lib.rs  rw.rs  stream.rs
tests/: main.rs
